# AI-agents-for-cybersecurity

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
part1_basic_examples_no_rag/: chat_model_basic.py
part1_foundational_topics/: README.md  chat_model_basic.py  chatbot_example.py
part1_foundational_topics/embeddings/: CVE_metadata_1000.tsv  CVE_vectors_1000.tsv  README.md  clustering.py
part2_prompt_templates/: README.md  chat_prompt_template.py  messages_placeholders.py  prompt_template_example.py
part3_prompt_chaining/: README.md  basic_chain_example1.py  basic_chain_security_incident_chain_example.py  branching_chains.py  branching_chains_threat_hunting.py  parallel_chains.py  parallel_chains_threat_hunting.py
part4_rag_examples/: Intro_to_Agentic_RAG.md  Intro_to_RAG.md  README.md  basic_rag_part3.py  web_scrape_basic.py
part5_agents_and_tools/: README.md  basic-agents-and-tools.md  basic_agent_and_tools.py  basic_agent_and_tools_scanner.py  langgraph-and-agents.md  langgraph-vs-langgraph-cloud.md
part5_agents_and_tools/agent_deep_dive/: agent_chat.py  agent_docstore.py
part5_agents_and_tools/agentic_rag/: agentic_RAG_details.md  agentic_rag_example.py
part5_agents_and_tools/asm_example/: README.md  main.py  pentest_graph_nodes.py  pentest_graph_router.py  pentest_graph_state.py
part5_agents_and_tools/deepagents_example/: README.md  soc_agent.py
part5_agents_and_tools/mcp_servers_examples/: README.md  (+1 more)
part5_agents_and_tools/mcp_servers_examples/shodan_mcp/: README.md  demo_agent.py  env_template.txt  ethical_hacking_agent.py  example_usage.py  pyproject.toml  requirements.txt  shodan-mcp-guide.md  shodan_mcp.py  test_agent_setup.py  test_shodan_openapi.py
(+13 files in other folders)
